src/test/ui/closures/closure-signature/unspecified-parameter-fn.stderr
error[E0282]: type annotations needed for the closure `fn(i32, fn(i32) -> _) -> Vec<i32>`
  --> $DIR/unspecified-parameter-fn.rs:2:13
   |
LL |     let a = |a: i32, b: fn(i32) -> _| -> Vec<i32> { Vec::new() };
   |             ^^^^^^^^^^^^^^^^^^^^^^^-^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    give this closure parameter an explicit type instead of `_`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
